# smart-mirror

./: .gitignore  CMakeLists.txt  README.md
include/: core.h  moduel.h  module.h  todo.h  widget.h
src/: core.cpp  main.cpp  module.cpp  todo.cpp  widget.cpp
